--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL = https://ocr-backend-production-3faa.up.railway.app/
+REACT_APP_API_URL = https://ocr-backend-production-3340.up.railway.app
